fix: horizontal overflow

--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -1,8 +1,4 @@
 :host {
-  padding: {
-    left: 16px;
-    right: 16px;
-  }
   display: grid;
   row-gap: 74px;
 }
